--- a/css/responsive.css
+++ b/css/responsive.css
@@ -31,7 +31,7 @@
 		left: 16px;
 	}
 }
-@media screen and (min-width: 579px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 	.logo__static{
 		position: absolute;
 		top: -10px;
@@ -72,11 +72,6 @@
 	.photo-grid .grid-item:hover figcaption p{
 		
 		left: 40px;
-	}
-	.photo-grid .grid-item:hover img {
-		-webkit-transform: scale(1.4);
-		-moz-transform: scale(1.4);
-		transform: scale(1.2);
 	}
 }
 @media screen and (max-width: 480px) {
@@ -124,15 +119,15 @@
 	}
 	
 }
-@media handheld and (min-width: 320px){
+@media screen and (max-width: 320px){
 	h1, h2, h3, h4, h5, h6 {
-    font-size: 17px !important;
+    font-size: 17px;
 	}
 	.overlay_headertext {
-		font-size: 14px;
+		font-size: 10px;
 	}
 	.text {
-		font-size: 10px;
+		font-size: 6.5px;
 		left: 40%;
 	}
 	.small__margin{
